--- a/shape-tech-test/jonatas-cesar-shape-test-tech.ipynb
+++ b/shape-tech-test/jonatas-cesar-shape-test-tech.ipynb
@@ -795,7 +795,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.3 - Classification perfomance"
+    "### 4.3 - Classification perfomance"
    ]
   },
   {
